# Zero-share

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  rtp_packetizer.cpp
app/src/main/java/com/ultrashare/: MainActivity.kt  UltraShareApp.kt
app/src/main/java/com/ultrashare/host/: CodecSelector.kt  HardwareEncoder.kt  HostService.kt  IdleFrameSuppressor.kt  ScreenCaptureManager.kt  ThermalMonitor.kt
app/src/main/java/com/ultrashare/input/: InputRelayService.kt
app/src/main/java/com/ultrashare/session/: NfcPairing.kt  QrPairing.kt  SessionManager.kt
app/src/main/java/com/ultrashare/telemetry/: LatencyBenchmark.kt  LatencyTracker.kt  StatsOverlay.kt
app/src/main/java/com/ultrashare/transport/: DataChannel.kt  LanDiscovery.kt  RtpReceiver.kt  RtpSender.kt  RtpSenderNative.kt  WiFiDirectManager.kt
app/src/main/java/com/ultrashare/viewer/: FrameRenderer.kt  HardwareDecoder.kt  InputRelayClient.kt  ViewerActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
